backend/configs/dev-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pioneers-dev-api-service
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  selector:
    run: pioneers-dev-api
  type: NodePort
